--- a/demo_ios_upgrade.yml
+++ b/demo_ios_upgrade.yml
@@ -5,32 +5,40 @@
   become: true
 
   vars:
-    cisco_update_binary: "{{ playbook_dir }}/../bin/c7200-advipservicesk9-mz.152-4.S5.bin"
-    cisco_update_md5: "{{ lookup('file', cisco_update_binary) | md5 }}"
+    cisco_binary: c7200-advipservicesk9-mz.152-4.S5.bin
+    cisco_update_src: "https://artifacts.autodotes.com/bin/{{ cisco_binary }}"
+    cisco_update_dest: "/tmp/{{ inventory_hostname }}_{{ cisco_binary }}"
+    cisco_update_md5: "{{ lookup('file', cisco_update_dest) | md5 }}"
     # ENV: ANSIBLE_PARAMIKO_LOOK_FOR_KEYS=false
 
   tasks:
+    - name: Download binary from remote src
+      delegate_to: localhost
+      ansible.builtin.get_url:
+        url: "{{ cisco_update_src }}"
+        dest: "{{ cisco_update_dest }}"
+
     # ip scp server enable
     - name: Copy binary to device # noqa risky-file-permissions
       tags: copy_image
       vars:
         ansible_command_timeout: 600
       ansible.netcommon.net_put:
-        src: "{{ cisco_update_binary }}"
-        dest: "{{ boot_drive }}:/{{ cisco_update_binary | basename }}"
+        src: "{{ cisco_update_dest }}"
+        dest: "{{ boot_drive }}:/{{ cisco_binary }}"
 
     - name: Verify checksum
       tags: copy_image
       register: r_checksum
       cisco.ios.ios_command:
         commands:
-          - "verify /md5 {{ boot_drive }}:/{{ cisco_update_binary | basename }} {{ cisco_update_md5 }}"
+          - "verify /md5 {{ boot_drive }}:/{{ cisco_binary }} {{ cisco_update_md5 }}"
 
     - name: Check if binary is already present
       tags: reboot
       cisco.ios.ios_command:
         commands:
-          - show version | include "{{ cisco_update_binary | basename }}"
+          - show version | include "{{ cisco_binary }}"
       register: version_output
       changed_when: false
 
@@ -40,7 +48,7 @@
       cisco.ios.ios_config:
         lines:
           - no boot system
-          - "boot system {{ boot_drive }}:/{{ cisco_update_binary | basename }}"
+          - "boot system {{ boot_drive }}:/{{ cisco_binary }}"
         save_when: modified
 
     - name: Reboot device # noqa no-handler
