--- a/demo_ios_facts.yml
+++ b/demo_ios_facts.yml
@@ -11,89 +11,51 @@
         gather_network_resources: all
       register: ios_facts_result
 
-    - name: Display device hostname and model
-      ansible.builtin.debug:
-        msg: |
-          ═══════════════════════════════════════════════════════════════
-          Device: {{ ansible_net_hostname | default('Unknown') }}
-          ═══════════════════════════════════════════════════════════════
-
     - name: Display system information
       ansible.builtin.debug:
-        msg: |
-          ┌─────────────────────────────────────────────────────────────┐
-          │ SYSTEM INFORMATION                                          │
-          ├─────────────────────────────────────────────────────────────┤
-          │ Hostname:       {{ ansible_net_hostname | default('N/A') }}
-          │ Model:          {{ ansible_net_model | default('N/A') }}
-          │ Serial Number:  {{ ansible_net_serialnum | default('N/A') }}
-          │ IOS Version:    {{ ansible_net_version | default('N/A') }}
-          │ IOS Type:       {{ ansible_net_iostype | default('N/A') }}
-          │ Image:          {{ ansible_net_image | default('N/A') }}
-          │ System:         {{ ansible_net_system | default('N/A') }}
-          └─────────────────────────────────────────────────────────────┘
+        msg: "{{ system_info | to_nice_json }}"
+      vars:
+        system_info:
+          hostname: "{{ ansible_net_hostname | default('N/A') }}"
+          model: "{{ ansible_net_model | default('N/A') }}"
+          serial_number: "{{ ansible_net_serialnum | default('N/A') }}"
+          ios_version: "{{ ansible_net_version | default('N/A') }}"
+          ios_type: "{{ ansible_net_iostype | default('N/A') }}"
+          image: "{{ ansible_net_image | default('N/A') }}"
+          system: "{{ ansible_net_system | default('N/A') }}"
 
     - name: Display hardware details
       ansible.builtin.debug:
-        msg: |
-          ┌─────────────────────────────────────────────────────────────┐
-          │ HARDWARE DETAILS                                            │
-          ├─────────────────────────────────────────────────────────────┤
-          │ Stacked Masters:    {{ ansible_net_stacked_masters | default([]) | join(', ') | default('N/A') }}
-          │ Stacked Serialnums: {{ ansible_net_stacked_serialnums | default([]) | join(', ') | default('N/A') }}
-          │ Filesystems:        {{ ansible_net_filesystems | default([]) | join(', ') | default('N/A') }}
-          │ Filesystems Info:   {{ ansible_net_filesystems_info | default({}) | to_nice_json }}
-          │ Memory Free:        {{ ansible_net_memfree_mb | default('N/A') }} MB
-          │ Memory Total:       {{ ansible_net_memtotal_mb | default('N/A') }} MB
-          └─────────────────────────────────────────────────────────────┘
+        msg: "{{ hardware_info | to_nice_json }}"
+      vars:
+        hardware_info:
+          stacked_masters: "{{ ansible_net_stacked_masters | default([]) }}"
+          stacked_serialnums: "{{ ansible_net_stacked_serialnums | default([]) }}"
+          filesystems: "{{ ansible_net_filesystems | default([]) }}"
+          filesystems_info: "{{ ansible_net_filesystems_info | default({}) }}"
+          memory_free_mb: "{{ ansible_net_memfree_mb | default('N/A') }}"
+          memory_total_mb: "{{ ansible_net_memtotal_mb | default('N/A') }}"
 
-    - name: Display interface summary
+    - name: Display interface information
       ansible.builtin.debug:
-        msg: |
-          ┌─────────────────────────────────────────────────────────────┐
-          │ INTERFACES                                                  │
-          ├─────────────────────────────────────────────────────────────┤
-          {% for iface in ansible_net_all_ipv4_addresses | default([]) %}
-          │ IPv4: {{ iface }}
-          {% endfor %}
-          {% for iface in ansible_net_all_ipv6_addresses | default([]) %}
-          │ IPv6: {{ iface }}
-          {% endfor %}
-          │ Interface List: {{ ansible_net_interfaces | default({}) | list | join(', ') }}
-          └─────────────────────────────────────────────────────────────┘
+        msg: "{{ interface_info | to_nice_json }}"
+      vars:
+        interface_info:
+          ipv4_addresses: "{{ ansible_net_all_ipv4_addresses | default([]) }}"
+          ipv6_addresses: "{{ ansible_net_all_ipv6_addresses | default([]) }}"
+          interfaces: "{{ ansible_net_interfaces | default({}) }}"
 
     - name: Display neighbors (CDP/LLDP)
-      when: ansible_net_neighbors | default({}) | length > 0
       ansible.builtin.debug:
-        msg: |
-          ┌─────────────────────────────────────────────────────────────┐
-          │ NEIGHBORS (CDP/LLDP)                                        │
-          ├─────────────────────────────────────────────────────────────┤
-          {{ ansible_net_neighbors | to_nice_yaml | indent(2) }}
-          └─────────────────────────────────────────────────────────────┘
+        msg: "{{ ansible_net_neighbors | default({}) | to_nice_json }}"
 
-    - name: Display network resource configurations
+    - name: Display network resources
       ansible.builtin.debug:
-        msg: |
-          ┌─────────────────────────────────────────────────────────────┐
-          │ NETWORK RESOURCES                                           │
-          ├─────────────────────────────────────────────────────────────┤
-          │ Available resource facts gathered:
-          │ {{ ansible_network_resources | default({}) | list | join(', ') | default('None') }}
-          └─────────────────────────────────────────────────────────────┘
+        msg: "{{ ansible_network_resources | default({}) | to_nice_json }}"
 
-    - name: Display full ansible_network_resources
+    - name: Display all gathered facts
       ansible.builtin.debug:
-        var: ansible_network_resources
-        verbosity: 1
-
-    - name: Display all gathered facts (verbose)
-      ansible.builtin.debug:
-        msg: |
-          ┌─────────────────────────────────────────────────────────────┐
-          │ ALL FACTS (RAW)                                             │
-          └─────────────────────────────────────────────────────────────┘
-          {{ ios_facts_result.ansible_facts | to_nice_yaml }}
+        msg: "{{ ios_facts_result.ansible_facts | to_nice_json }}"
       tags: raw_facts
       when: show_raw_facts | default(false) | bool
 
@@ -105,4 +67,3 @@
         mode: '0644'
       tags: save_facts
       when: save_facts | default(false) | bool
-
