--- a/demo_ios_facts.yml
+++ b/demo_ios_facts.yml
@@ -16,6 +16,13 @@
           filename: "running-config-{{ inventory_hostname }}"
           dir_path: "{{ playbook_dir }}"
 
+    - name: Update interface description with a timestamp
+      cisco.ios.ios_interfaces:
+        config:
+          - name: GigabitEthernet1
+            description: "Random description change {{ 100 | ansible.builtin.random }}"
+            enabled: true
+
     - name: Gather all available facts from Cisco IOS devices
       cisco.ios.ios_facts:
         gather_subset: all
@@ -91,4 +98,4 @@
     - name: Diff post-check config against pre-check
       cisco.ios.ios_config:
         diff_against: intended
-        intended_config: "{{ lookup('ansible.builtin.file', 'running-config-' + inventory_hostname) }}"
+        intended_config: "{{ lookup('ansible.builtin.file', playbook_dir + '/running-config-' + inventory_hostname) }}"
